<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.helge.moviebook.vo.MovieDetails" />

        <variable
            name="networkState"
            type="com.helge.moviebook.repository.network.NetworkState" />

        <import type="com.helge.moviebook.repository.network.Status" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinateLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:visibility="@{networkState.status == Status.SUCCESS}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/baseInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Universal Pictures, USA. Released 01.01.2019"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/webSite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:autoLink="web"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/baseInfo"
                    app:setTextOrHide="@{model.website}"
                    tools:text="https://example.com/" />

                <Button
                    android:id="@+id/plotShowHide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawableStart="@drawable/ic_add"
                    android:text="@string/plot"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hideIfNotAvailable="@{model.plot}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/webSite" />

                <at.blogc.android.views.ExpandableTextView
                    android:id="@+id/plotText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:maxLines="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:animation_duration="500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/plotShowHide"
                    app:setTextOrHide="@{model.plot}" />

                <TextView
                    android:id="@+id/crewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/crew"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/plotText"
                    tools:visibility="visible" />

                <TableLayout
                    android:id="@+id/crewTable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/border"
                    android:padding="0.5dp"
                    android:shrinkColumns="1"
                    android:stretchColumns="1"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/crewText"
                    tools:visibility="visible">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hideIfNotAvailable="@{model.director}">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:gravity="center_vertical"
                            android:padding="8dp"
                            android:text="@string/director"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:gravity="center_vertical"
                            android:padding="8dp"
                            android:text="@{model.director}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            tools:text="Names" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hideIfNotAvailable="@{model.writer}">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:gravity="center_vertical"
                            android:padding="8dp"
                            android:text="@string/writer"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:gravity="center_vertical"
                            android:padding="8dp"
                            android:text="@{model.writer}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            tools:text="Names" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hideIfNotAvailable="@{model.actors}">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:gravity="center_vertical"
                            android:padding="8dp"
                            android:text="@string/actors"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:gravity="center_vertical"
                            android:padding="8dp"
                            android:text="@{model.actors}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            tools:text="Names" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/ratingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/reception"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/crewTable"
                    tools:visibility="visible" />

                <TableLayout
                    android:id="@+id/ratingTable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/border"
                    android:padding="0.5dp"
                    android:shrinkColumns="1"
                    android:stretchColumns="1"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ratingsText">

                    <!-- dynamically adding ratings from list -->

                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/loadingView"
            layout="@layout/network_state" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tall_toolbar_height"
            app:expanded="false">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:titleEnabled="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/posterBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/poster"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/poster"
                        android:scaleType="fitCenter" />
                </FrameLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="?homeAsUpIndicator" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>